aw: Update background colour on newly created RVH

WebContents main frame hasn't been updated by the time RenderViewCreated
is called, but it is available via render_view_host.

Bug: 802172
Change-Id: I5841fe34ee7226611a5ad2c66cf3c971fd40c670